# Shotbot

./: .coverage  .gitignore  ACTIVE_DOCUMENTATION.md  AGENTS.md  AGENT_VERIFICATION_REPORT.md  AUDIT_REPORTS_INDEX.md  AUDIT_SUMMARY.txt  AUTO_PUSH_SYSTEM.md  AUTO_PUSH_TROUBLESHOOTING_DO_NOT_DELETE.md  BEST_PRACTICES_AUDIT.md  BEST_PRACTICES_AUDIT_INDEX.md  BEST_PRACTICES_AUDIT_REPORT.md  BEST_PRACTICES_CODE_EXAMPLES.md  BEST_PRACTICES_SUMMARY.txt  BLUEBOLT_REZ_PACKAGES.md  BLUEBOLT_REZ_PACKAGES_FULL.md  CLAUDE - Copy.md  CLAUDE.md  CODE_REVIEW_REPORT.md  COMMAND_LAUNCHER_TYPE_SAFETY_ANALYSIS.md  CRITICAL_FIXES_GUIDE.md  CRITICAL_FIX_CORRECTION.md  DEADLOCK_FIX_ANALYSIS.md  FIFO_RACE_CONDITION_SUMMARY.txt  FIX_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_PLAN_AMENDED.md  IMPLEMENTATION_PLAN_PART1.md  LAUNCHER_ARCHITECTURAL_REVIEW.md  LAUNCHER_AUDIT_SUMMARY.txt  LAUNCHER_BEST_PRACTICES_AUDIT.md  LAUNCHER_FIXES_WITH_CODE.md  LAUNCHER_TERMINAL_AUDIT_REPORT.md  LOG_ISSUES_RESOLUTION_COMPLETE.md  MOCK_REDUCTION_FINDINGS.md  PERFORMANCE_BASELINE.json  PERFORMANCE_OPTIMIZATIONS.md  PERSISTENT_TERMINAL_RACE_FIX_PLAN.md  PHASE1_ASYNC_SIGNAL_FLOW_IMPLEMENTATION.md  PHASE2_PROCESS_VERIFICATION_SUMMARY.md  PROCESS_MANAGER_MOCK_ANALYSIS.md  (+403 more)
.github/: dependabot.yml
.post-commit-output/: README.md  bundle.txt  commit_msg.txt  current_commit.txt  import-test.txt  info.txt  ruff-check.txt  summary.txt  type-check.txt
.serena/: project.yml
PROMPT/: high_value_prompts_tailored_to_shotbot.md  original_request.md
PROMPTS/: high_value_prompts.md
PROMPTS2/: shotbot_prompts.md
archive/: README.md
archive-test-audit/: ADVANCED_TESTING_GUIDE.md  APPLICATION_IMPROVEMENT_METRICS.md  ARCHITECTURAL_DECISIONS.md  ARCHITECTURE_ISSUES_DISCOVERED.md  COMPLEXITY_REDUCTION_COMPLETE.md  COMPREHENSIVE_FIX_PLAN_DO_NOT_DELETEv2.md  COMPREHENSIVE_SECURITY_QUALITY_AGENTREPORT.md  COMPREHENSIVE_STABILIZATION_REPORT.md  COVERAGE_CONFIGURATION.md  LINTING_FINAL_REPORT.md  LINTING_FIXES_COMPLETE.md  LINTING_FIX_PLAN.md  MODULE_DEPENDENCY_GRAPH.md  MULTI_AGENT_REVIEW_REPORT.md  NUKE_UNDISTORTION_IMPORT_FINDINGS_DO_NOT_DELETE.md  OPTION_A_FIXES_COMPLETE.md  OPTION_A_IMPLEMENTATION_COMPLETE.md  OPTION_A_WEEK1_COMPLETE.md  OPTION_A_WEEK1_PROGRESS.md  PERFORMANCE_SPRINT_AGENT_REPORT.md  PYTHON_PYSIDE_TESTING_GUIDE_DO_NOT_DELETE.md  QT_MODELVIEW_OPTIMIZATION_GUIDE.md  README_PERFORMANCE_PROFILING.md  REFACTORING_SUMMARY.md  SELECTIVE_ROLLBACK_COMPLETE.md  TESTING_BEST_PRACTICES_2025-10-31.md  THREADING_ARCHITECTURE.md  THREADING_FIXES_SUMMARY.md  TYPE_FIXES_SUMMARY.md  WEEK2_COMPREHENSIVE_REVIEW.md  WEEK2_CRITICAL_FIXES_APPLIED.md  WEEK2_DAY1_PROGRESS.md  WEEK2_FINAL_STATUS.md  WEEK2_HIGH_PRIORITY_FIXES_PHASE2.md  WEEK2_HIGH_PRIORITY_FIXES_PHASE3.md  WEEK2_HIGH_PRIORITY_FIXES_PHASE4.md  WEEK2_HIGH_PRIORITY_FIXES_PHASE5.md  test_coverage_recommendations.md
bundle_workflow_template/: README.md  bundle_app.py  decode_app.py  transfer_cli.py  transfer_config.json
cache/: __init__.py  _constants.py  _dir_resolver.py  _json_store.py  _merge.py  coordinator.py  latest_file_cache.py  scene_cache_disk.py  shot_cache.py  thumbnail_cache.py  thumbnail_loader.py  types.py
commands/: TestRules.md  __init__.py  maya_commands.py  nuke_commands.py  rv_commands.py  threede_commands.py
controllers/: __init__.py  crash_recovery.py  data_event_handler.py  filter_coordinator.py  filter_helpers.py  launch_coordinator.py  launcher_controller.py  my_shots_tab_coordinator.py  previous_shots_tab_coordinator.py  refresh_coordinator.py  settings_controller.py  shot_selection_controller.py  startup_orchestrator.py  threede_cache_adapter.py  threede_controller.py  threede_selection_handler.py  threede_tab_coordinator.py  threede_worker_manager.py  thumbnail_size_manager.py
dcc/: __init__.py  dcc_accordion.py  dcc_config.py  dcc_file_table.py  dcc_section.py  dcc_section_base.py  dcc_section_file.py  dcc_section_rv.py  dcc_sequence_table.py  scene_file.py
deploy/: __init__.py  bundle_app.py  decode_app.py  transfer_cli.py
dev-tools/: README.md  apply_logging_mixin.py  apply_threading_fixes.py  check_python311_compat.py  check_test_antipatterns.py  debug_shot_names.py  profile_startup_performance.py  regex_optimization_summary.py  run_optimization_tests.py  run_thread_safety_tests.py  run_type_check.py  thumbnail_bottleneck_profiler.py
discovery/: __init__.py  file_discovery.py  filesystem_scanner.py  finder_utils.py  frame_range_extractor.py  frame_utils.py  latest_file_finder_worker.py  latest_finder_base.py  latest_finders.py  maya_comment_reader.py  maya_latest_finder.py  plate_discovery.py  plate_finders.py  publish_plate_finder.py  scene_discovery_coordinator.py  scene_parser.py  thumbnail_finders.py  user_sequence_finder.py
docs/: AGENT_FINDINGS_SYNTHESIS.md  CACHING_ARCHITECTURE.md  DEPLOYMENT_SYSTEM.md  FIFO_IPC_EXECUTIVE_SUMMARY.md  ISSUE_COMPARISON_ANALYSIS.md  LAUNCHER_AND_VFX_ENVIRONMENT.md  LAUNCHER_ARCHITECTURE_ANALYSIS.md  PHASE_2_TIMEOUT_HANDLING_PLAN.md  PHASE_2_TIMEOUT_HANDLING_PLAN_V2.md  QT_LAUNCHER_THREADING_ANALYSIS.md  QT_THREADING_ANALYSIS.md  README.md  README_FIFO_ANALYSIS.md  SIGNAL_ROUTING.md  SKYLOS_DEAD_CODE_DETECTION.md  TEST_FIXTURES_GUIDE.md  THREADING_ARCHITECTURE.md  Terminal_Issue_History_DND.md  XDIST_REMEDIATION_ROADMAP.md  skylos-dead-code-audit-2026-03-03.md
encoded_releases/: encoded_app_20250814_154958.txt  shotbot_latest.txt  shotbot_latest_metadata.json
examples/: custom_launcher_integration.py
launch/: __init__.py  app_handlers.py  command_builder.py  command_launcher.py  environment_builder.py  environment_manager.py  file_search_coordinator.py  headless_mode.py  latest_file_finder_worker.py  launch_operation.py  launch_request.py  process_executor.py  process_verifier.py  rv_launcher.py  workspace_validator.py
launcher/: config_manager.py  models.py  process_manager.py  validator.py  worker.py
logsSB/: dispatcher.out
managers/: __init__.py  _json_helpers.py  _keyed_list_store.py  _shot_key.py  file_pin_manager.py  hide_manager.py  notes_manager.py  notification_manager.py  (+4 more)
(+1465 files in other folders)
