# Minimal project metadata - just enough for uv/PEP 621 compliance
# Not an installable package: no [build-system], no dependencies list
[project]
name = "shotbot"
version = "0.0.0"  # Placeholder - actual versioning via git tags
requires-python = ">=3.11"

[tool.basedpyright]
# Check all Python files in the project (no include list = check everything)
# NOTE: tests excluded from type checking (test utilities have untyped decorators and generics)
# Core business logic is fully typed; this trade-off keeps signal-to-noise high
exclude = [
    "tests/**",
    "scripts/**",  # VFX tool scripts (tde4, sgtk) - can't type-check without external deps
    "**/node_modules",
    "**/__pycache__",
    ".venv/**",
    "venv/**",
    "test_venv/**",
    "docs/**",
    "archive/**",
    "BB/**",
    ".git/**",
    ".github/**",
    ".pytest_cache/**",
    ".ruff_cache/**",
    ".hypothesis/**",
    "htmlcov/**",
    "encoded_releases/**",
    "examples/**",
    ".post-commit-output/**",
    "dev-tools/**",
    "wrapper/**",
    "*.sh",  # Exclude bash/shell scripts (not Python)
    "*_backup.py",
    # Utility/maintenance scripts (not part of main application)
    "fix_*.py",
    "run_*.py",
    "verify_*.py",
    "bundle_app.py",
    "decode_app.py",
    "recreate_vfx_structure.py",
    "capture_vfx_structure.py",
]

pythonVersion = "3.11"
typeCheckingMode = "strict"

# Type checking strictness: Strict mode with reportUnknown* as errors
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownMemberType = "error"        # Catch library API misuses
reportUnknownParameterType = "error"     # Catch library API misuses
reportUnknownArgumentType = "error"      # Catch library API misuses
reportUnknownVariableType = "error"      # Catch library API misuses
reportUndefinedVariable = "error"
reportImplicitStringConcatenation = false
reportUnsafeMultipleInheritance = false
reportUnusedCallResult = "error"
reportImplicitOverride = "error"
# Qt-specific adjustments (PySide6 type stub limitations)
reportUnannotatedClassAttribute = "error"  # Signal annotations with ClassVar[Signal] recommended
reportUnusedFunction = "error"  # Keep enabled; only false positives with autoconnect patterns
reportAny = "information"  # Reduces noise from Qt's broad Any in stubs while keeping visibility

[tool.ruff]
# Target Python 3.11+
target-version = "py311"

# Line length to match Black (88 is standard)
line-length = 88

# Enable auto-fixing by default
fix = true
show-fixes = true

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".hypothesis",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
    "dev-tools",
    "*.sh",  # Exclude bash/shell scripts (not Python)
]

[tool.ruff.lint]
# Enable these rule categories
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "C90",    # mccabe complexity
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "T20",    # flake8-print (catch print statements)
    "ERA",    # eradicate (commented-out code)
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TC",     # flake8-type-checking (renamed from TCH)
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt (f-string conversion)
    "PERF",   # perflint
    "FURB",   # refurb (modernization)
    "SLOT",   # flake8-slots (__slots__ checks)
    "RUF",    # Ruff-specific rules
]

# Ignore these specific rules
ignore = [
    # Style choices
    "E501",    # line-too-long (let formatter handle it)
    "E203",    # whitespace-before-punctuation (conflicts with Black)

    # Type annotation flexibility
    "ANN401",  # any-type (Any is useful in generic code)

    # Import placement
    "E402",    # module-level-import-not-at-top-of-file (sometimes needed for Qt apps)
    "TC003",   # typing-only-standard-library-import (prefer consistency)

    # Qt-specific patterns
    "SLF001",  # private-member-access (common in Qt testing and subclassing)
    "ARG002",  # unused-method-argument (Qt callbacks often have unused args)
    "N802",    # function-name-should-be-lowercase (Qt methods must be camelCase)
    "N815",    # variable-in-class-scope-should-not-be-mixedcase (Qt properties must be mixedCase)

    # Lazy imports (intentional for circular import avoidance and performance)
    "PLC0415", # import-outside-top-level (used for lazy loading and circular import avoidance)

    # Complexity rules (design decisions - would require significant refactoring)
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "C901",    # complex-structure

    # Exception handling (allow practical patterns)
    "TRY002",  # create-own-exception (generic exceptions acceptable in tests)
    "TRY003",  # raise-vanilla-args (vanilla exceptions are often fine)
    "TRY004",  # prefer-type-error (ValueError/Exception acceptable for type issues)
    "TRY300",  # try-consider-else (not always clearer)
    "BLE001",  # blind-except (sometimes needed for cleanup)
    "TRY400",  # error-instead-of-exception (Error is fine in Python 3)

    # Boolean arguments (common in GUI apps)
    "FBT001",  # boolean-type-hint-positional-argument
    "FBT002",  # boolean-default-value-positional-argument

    # Simplification preferences (explicit code is often clearer)
    "SIM102",  # collapsible-if (nested ifs can be more readable)
    "SIM105",  # suppressible-exception (try/except/pass is explicit)
    "FBT003",  # boolean-positional-value-in-call

    # Print statements (useful for debugging and CLI output)
    "T201",    # print (we use print intentionally in some places)

    # Commented-out code detection (too many false positives on documentation comments)
    "ERA001",  # found-commented-out-code (flags doc comments like "# - method_name()" as code)

    # Logging (f-strings are readable)
    "G004",    # logging-f-string (f-strings are fine for our use case)

    # Docstrings (we have our own standards)
    "D",       # pydocstyle (too opinionated, we follow our own style)

    # Magic values (sometimes clearer than named constants)
    "PLR2004", # magic-value-comparison

    # Performance (micro-optimizations not worth it)
    "PERF203", # try-except-in-loop (rarely a real issue)
]

# Allow these specific patterns
[tool.ruff.lint.per-file-ignores]
# Tests have different standards
"tests/**/*.py" = [
    "S101",    # assert (asserts are the point of tests)
    "ARG001",  # unused-function-argument (pytest fixtures)
    "PLR2004", # magic-value-comparison (test data can be literal)
    "PLR0913", # too-many-arguments (pytest fixtures often need many params)
    "S108",    # hardcoded-temp-file (fine in tests)
    "DTZ001",  # call-datetime-without-tzinfo (tests don't need tz)
    "B018",    # useless-expression (testing expressions)
]

# Config files can have magic values
"**/config*.py" = [
    "PLR2004", # magic-value-comparison
]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["shotbot"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pyupgrade]
# Keep modern Python syntax
keep-runtime-typing = true

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test execution options
# NOTE: Coverage is disabled by default for faster local runs.
# Run with coverage manually: pytest tests/ --cov=. --cov-report=term-missing --cov-report=html:coverage_html
addopts = [
    "--strict-markers",     # Fail on unknown markers
    "-ra",                  # Show all test summary info
    "--durations=20",       # Show slowest 20 tests
    "--tb=short",
    "-p", "no:rerunfailures",
    "-p", "no:xvfb",
    "--dist=loadgroup",     # Keeps xdist groups on a single worker for Qt safety
    # Serial execution by default for Qt stability and leak detection
    # Override with `pytest tests/ -n 2` for faster development
    # Override with `pytest tests/ -n auto` for maximum parallelism
    # Note: -n 0 is invalid; serial mode = omit -n entirely (xdist still loads but doesn't parallelize)
]

# Timeout configuration (2 minutes per test to catch hanging tests)
timeout = 120
timeout_method = "thread"
faulthandler_timeout = 120  # Dump all thread stacks if test hard-hangs (helpful for Qt deadlocks)

# pytest-qt configuration
qt_api = "pyside6"  # Lock to PySide6 (prevent accidental PyQt usage in CI)

# Filter warnings (targeted ignores to avoid hiding real issues)
filterwarnings = [
    # Common noisy deprecations from dependencies
    "ignore:.*pkg_resources.*:DeprecationWarning",
    "ignore:.*distutils.*:DeprecationWarning",
    # Qt-specific warnings that are safe to ignore
    "ignore:.*QPixmapCache.*:DeprecationWarning",
    # Keep other DeprecationWarning visible to catch actual issues in our code
]

# Test markers
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "qt: Tests requiring Qt GUI",
    "xdist_group(name): Group tests onto the same xdist worker",
    "hardware: Tests requiring specific hardware",
    "slow: Tests that take a long time to run (>1 second)",
    "fast: Tests under 100ms",
    "stress: Stress tests that exercise system under heavy load",
    "concurrency: Tests for thread safety and concurrent/threading behavior",
    "regression: Regression tests for specific bugs",
    "flaky: Tests that may fail intermittently (should be investigated and fixed)",
    "critical: Critical/high priority tests",
    "performance: Performance benchmarks and comparisons (may be skipped in CI/WSL)",
    "enforce_unique_connections: Tests with UniqueConnection enforcement for signal safety",
    "real_subprocess: Skip autouse subprocess mocks for tests needing real process behavior",
    "permissive_subprocess: Disable strict mode for subprocess mocking (deprecated - use subprocess_mock)",
    "permissive_process_pool: Disable strict mode for ProcessPoolManager mocking",
    "enforce_thread_guard: Enable main-thread rejection in TestProcessPool for contract testing",
]

# Coverage configuration
[tool.coverage.run]
branch = true           # Measure branch coverage (not just line coverage)
source = ["."]          # Measure coverage for all project code
parallel = true         # Enable parallel mode for xdist compatibility
omit = [
    "tests/*",          # Don't measure coverage of test code itself
    "**/__main__.py",   # Entry points often have trivial coverage
    "*/_version.py",    # Version files are auto-generated
    ".venv/*",          # Virtual environment
    "venv/*",
    "dev-tools/*",      # Development utilities
    "archive/*",        # Archived code
    "examples/*",       # Example scripts
    "shibokensupport/*", # PySide6 internal files (Qt binding generator support)
    "signature_bootstrap.py", # PySide6 signature bootstrapping
    # VFX-specific integrations (require external software, tested manually)
    "nuke_*.py",
    "maya_*.py",
    "threede_*.py",
    "controllers/threede_controller.py",
    # GUI components (primarily visual, tested via integration tests)
    "ui_components.py",
    "accessibility_manager.py",
    "thumbnail_widget*.py",
]

[tool.coverage.report]
skip_covered = true     # Don't show files with 100% coverage in terminal output
show_missing = true     # Show line numbers of missing coverage
fail_under = 0          # No threshold - coverage is informational (enforce in CI with full suite)
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":',
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
