[project]
name = "shotbot"
version = "0.0.0"  # Placeholder - actual versioning via git tags
requires-python = ">=3.11"
dependencies = [
    "PySide6~=6.10.0",
    "pillow>=12.1.1",
    "psutil~=7.1.0",
    "typing-extensions~=4.15.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    # Testing
    "pytest~=8.4.0",
    "pytest-qt~=4.5.0",
    "pytest-mock~=3.15.0",
    "pytest-cov~=7.0.0",
    "pytest-xdist~=3.8.0",
    "pytest-timeout~=2.4.0",
    "pytest-randomly~=3.16.0",
    "hypothesis~=6.100.0",
    "time-machine~=2.18.0",
    # Development
    "ruff~=0.14.0",
    "basedpyright~=1.32.0",
    "deptry~=0.23.0",
    "skylos>=3.4.3",
]

[tool.basedpyright]
# Check all Python files in the project (no include list = check everything)
# NOTE: tests excluded from type checking (test utilities have untyped decorators and generics)
# Core business logic is fully typed; this trade-off keeps signal-to-noise high
exclude = [
    "tests/**",
    "scripts/**",  # VFX tool scripts (tde4, sgtk) - can't type-check without external deps
    "**/node_modules",
    "**/__pycache__",
    ".venv/**",
    "venv/**",
    "test_venv/**",
    "docs/**",
    "archive/**",
    "BB/**",
    ".git/**",
    ".github/**",
    ".pytest_cache/**",
    ".ruff_cache/**",
    ".hypothesis/**",
    "htmlcov/**",
    "encoded_releases/**",
    "examples/**",
    ".post-commit-output/**",
    "dev-tools/**",
    "wrapper/**",
    "*.sh",  # Exclude bash/shell scripts (not Python)
    "*_backup.py",
    # Utility/maintenance scripts (not part of main application)
    "fix_*.py",
    "run_*.py",
    "verify_*.py",
    "bundle_app.py",
    "decode_app.py",
    "recreate_vfx_structure.py",
    "capture_vfx_structure.py",
]

pythonVersion = "3.11"
typeCheckingMode = "strict"

# Type checking strictness: Strict mode with reportUnknown* as errors
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownMemberType = "error"        # Catch library API misuses
reportUnknownParameterType = "error"     # Catch library API misuses
reportUnknownArgumentType = "error"      # Catch library API misuses
reportUnknownVariableType = "error"      # Catch library API misuses
reportUndefinedVariable = "error"
reportImplicitStringConcatenation = false
reportUnsafeMultipleInheritance = false
reportUnusedCallResult = "error"
reportImplicitOverride = "error"
# Qt-specific adjustments (PySide6 type stub limitations)
reportUnannotatedClassAttribute = "error"  # Signal annotations with ClassVar[Signal] recommended
reportUnusedFunction = "error"  # Keep enabled; only false positives with autoconnect patterns
reportAny = "information"  # Reduces noise from Qt's broad Any in stubs while keeping visibility

[tool.ruff]
# Target Python 3.11+
target-version = "py311"

# Line length to match Black (88 is standard)
line-length = 88

# Enable auto-fixing by default
fix = true
show-fixes = true

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".hypothesis",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
    "dev-tools",
    "*.sh",  # Exclude bash/shell scripts (not Python)
]

[tool.ruff.lint]
# Enable these rule categories
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "C90",    # mccabe complexity
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "T20",    # flake8-print (catch print statements)
    "ERA",    # eradicate (commented-out code)
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TC",     # flake8-type-checking (renamed from TCH)
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt (f-string conversion)
    "PERF",   # perflint
    "FURB",   # refurb (modernization)
    "SLOT",   # flake8-slots (__slots__ checks)
    "RUF",    # Ruff-specific rules
    "EM",     # flake8-errmsg (exception message best practices)
    "LOG",    # flake8-logging (logging best practices)
    "BLE",    # flake8-blind-except (catch blind except:)
]

# Ignore these specific rules
ignore = [
    # Style choices
    "E501",    # line-too-long (let formatter handle it)
    "E203",    # whitespace-before-punctuation (conflicts with Black)

    # Import placement
    "E402",    # module-level-import-not-at-top-of-file (sometimes needed for Qt apps)
    "TC003",   # typing-only-standard-library-import (prefer consistency)

    # Qt-specific patterns
    "ARG002",  # unused-method-argument (Qt callbacks often have unused args)
    "N802",    # function-name-should-be-lowercase (Qt methods must be camelCase)
    "N815",    # variable-in-class-scope-should-not-be-mixedcase (Qt properties must be mixedCase)

    # Lazy imports (intentional for circular import avoidance and performance)
    "PLC0415", # import-outside-top-level (used for lazy loading and circular import avoidance)

    # Complexity rules (design decisions - would require significant refactoring)
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "C901",    # complex-structure

    # Exception handling (allow practical patterns)
    "TRY002",  # create-own-exception (generic exceptions acceptable in tests)
    "TRY003",  # raise-vanilla-args (vanilla exceptions are often fine)
    "TRY004",  # prefer-type-error (ValueError/Exception acceptable for type issues)
    "TRY300",  # try-consider-else (not always clearer)
    "TRY301",  # abstract-raise (raising in try blocks is fine)
    "TRY400",  # error-instead-of-exception (Error is fine in Python 3)

    # Simplification preferences (explicit code is often clearer)
    "SIM102",  # collapsible-if (nested ifs can be more readable)
    "SIM105",  # suppressible-exception (try/except/pass is explicit)

    # Print statements (useful for debugging and CLI output)
    "T201",    # print (we use print intentionally in some places)

    # Commented-out code detection (too many false positives on documentation comments)
    "ERA001",  # found-commented-out-code (flags doc comments like "# - method_name()" as code)

    # Magic values (sometimes clearer than named constants)
    "PLR2004", # magic-value-comparison

    # Performance (micro-optimizations not worth it)
    "PERF203", # try-except-in-loop (rarely a real issue)

    # Blind except (TODO: fix incrementally in critical paths, then remove this ignore)
    "BLE001",  # blind-except (316 violations - tackle incrementally)
]

# Allow these specific patterns
[tool.ruff.lint.per-file-ignores]
# Tests have different standards
"tests/**/*.py" = [
    "ARG001",  # unused-function-argument (pytest fixtures)
    "PLR2004", # magic-value-comparison (test data can be literal)
    "PLR0913", # too-many-arguments (pytest fixtures often need many params)
    "DTZ001",  # call-datetime-without-tzinfo (tests don't need tz)
    "B018",    # useless-expression (testing expressions)
    "EM101",   # raw-string-in-exception (test exceptions can be simple)
    "EM102",   # f-string-in-exception (test exceptions can be simple)
    "LOG015",  # root-logger-call (tests can use root logger)
]

# Config files can have magic values
"**/config*.py" = [
    "PLR2004", # magic-value-comparison
]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["shotbot"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pyupgrade]
# Keep modern Python syntax
keep-runtime-typing = true

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
norecursedirs = ["tests/manual", "tests/performance", ".git", ".venv", "archive", ".hypothesis"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Required plugins (ensures config options like --dist, timeout, qt_api don't silently half-work)
required_plugins = [
    "pytest-xdist",
    "pytest-timeout",
    "pytest-qt",
    "pytest-randomly",
]

# Test execution options
# NOTE: Coverage is disabled by default for faster local runs.
# Run with coverage manually: pytest tests/ --cov=. --cov-report=term-missing --cov-report=html:coverage_html
addopts = [
    "--strict-markers",     # Fail on unknown markers
    "--strict-config",      # Fail on unknown config options
    "-ra",                  # Show all test summary info
    "-m", "not legacy",  # Default high-signal suite
    "--durations=20",       # Show slowest 20 tests
    "--randomly-seed=last", # Reproduce last run's order (use --randomly-seed=<N> for specific seed)
    "--tb=short",
    "-p", "no:rerunfailures",
    "-p", "no:xvfb",
    "--dist=loadgroup",     # Keeps xdist groups on a single worker for Qt safety
    # Serial execution by default for Qt stability and leak detection
    # Override with `pytest tests/ -n 2` for faster development
    # Override with `pytest tests/ -n auto` for maximum parallelism
    # Note: -n 0 runs serial via xdist (same as omitting -n but xdist still loads)
]

# Timeout configuration (2 minutes per test to catch hanging tests)
timeout = 120
timeout_method = "thread"
faulthandler_timeout = 120  # Dump all thread stacks if test hard-hangs (helpful for Qt deadlocks)

# pytest-qt configuration
qt_api = "pyside6"  # Lock to PySide6 (prevent accidental PyQt usage in CI)

# Filter warnings (targeted ignores to avoid hiding real issues)
filterwarnings = [
    # Common noisy deprecations from dependencies
    "ignore:.*pkg_resources.*:DeprecationWarning",
    "ignore:.*distutils.*:DeprecationWarning",
    # Qt-specific warnings that are safe to ignore
    "ignore:.*QPixmapCache.*:DeprecationWarning",
    # Keep other DeprecationWarning visible to catch actual issues in our code
]

# Test markers
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "qt: Tests requiring Qt GUI",
    "xdist_group(name): Group tests onto the same xdist worker",
    "hardware: Tests requiring specific hardware",
    "slow: Tests that take a long time to run (>1 second)",
    "fast: Tests under 100ms",
    "stress: Stress tests that exercise system under heavy load",
    "concurrency: Tests for thread safety and concurrent/threading behavior",
    "thread_safety: Tests for thread safety and concurrent/threading behavior",
    "regression: Regression tests for specific bugs",
    "flaky: Tests that may fail intermittently (should be investigated and fixed)",
    "critical: Critical/high priority tests",
    "performance: Performance benchmarks and comparisons (may be skipped in CI/WSL)",
    "enforce_unique_connections: Tests with UniqueConnection enforcement for signal safety",
    "real_subprocess: Skip autouse subprocess mocks for tests needing real process behavior",
    "permissive_subprocess: Disable strict mode for subprocess mocking (deprecated - use subprocess_mock)",
    "permissive_process_pool: Disable strict mode for ProcessPoolManager mocking",
    "enforce_thread_guard: Enable main-thread rejection in TestProcessPool for contract testing",
    "allow_main_thread: Allow calls from main/UI thread in TestProcessPool (opt-out from default guard)",
    "thread_leak_ok: Allow thread leaks in this test (opt-out from FAIL_ON_THREAD_LEAK)",
    "persistent_cache: Skip disk cache clearing for tests that need pre-seeded cache files",
    "legacy: Lower-signal or duplicate historical coverage (excluded from default runs)",
    "gui_mainwindow: Tests requiring main window GUI",
    "qt_heavy: Qt-intensive tests",
    "integration_unsafe: Potentially unsafe integration tests",
    "integration_safe: Integration tests safe to run in all environments",
    "skip_if_parallel: Skip when running in parallel mode due to Qt state pollution",
    "allow_dialogs: Suppress strict dialog failure for a test",
    "real_timing: Bypass short-wait patch for timing-sensitive tests",
]

# Coverage configuration
[tool.coverage.run]
branch = true           # Measure branch coverage (not just line coverage)
source = ["."]          # Measure coverage for all project code
parallel = true         # Enable parallel mode for xdist compatibility
omit = [
    "tests/*",          # Don't measure coverage of test code itself
    "**/__main__.py",   # Entry points often have trivial coverage
    "*/_version.py",    # Version files are auto-generated
    ".venv/*",          # Virtual environment
    "venv/*",
    "dev-tools/*",      # Development utilities
    "archive/*",        # Archived code
    "examples/*",       # Example scripts
    "shibokensupport/*", # PySide6 internal files (Qt binding generator support)
    "signature_bootstrap.py", # PySide6 signature bootstrapping
    # VFX-specific integrations (require external software, tested manually)
    "nuke_*.py",
    "maya_*.py",
    "threede_*.py",
    "controllers/threede_controller.py",
    # GUI components (primarily visual, tested via integration tests)
    "ui_components.py",
    "accessibility_manager.py",
    "thumbnail_widget*.py",
]

[tool.coverage.report]
skip_covered = true     # Don't show files with 100% coverage in terminal output
show_missing = true     # Show line numbers of missing coverage
fail_under = 0          # No threshold - coverage is informational (enforce in CI with full suite)
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":',
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.deptry]
extend_exclude = [
    "scripts",       # VFX DCC scripts (import nuke, sgtk, maya — not pip packages)
    "dev-tools",     # Development utilities with local imports
    "archive",       # Archived code
    "docs",          # Documentation
    "examples",      # Example scripts
]

[tool.deptry.per_rule_ignores]
# shiboken6 is a transitive dep from PySide6, but we import it directly for type checks
DEP003 = ["shiboken6"]


[tool.skylos]
# Whitelist: patterns for dynamic dispatch Skylos can't trace
[tool.skylos.whitelist]
names = [
    # Qt signal/slot targets (connected via signal.connect(obj.method))
    "on_*",
    "_on_*",
    # Qt virtual overrides called by the C++ framework
    "eventFilter",
    "contextMenuEvent",
    "sizeHint",
    "paint",
    "closeEvent",
    "resizeEvent",
    "keyPressEvent",
    "mousePressEvent",
    "mouseReleaseEvent",
    "mouseMoveEvent",
    "wheelEvent",
    "showEvent",
    "hideEvent",
    "run",             # QRunnable.run() / QThread.run()
    "do_work",         # ThreadSafeWorker.do_work() — called by base class run()
    "data",            # QAbstractItemModel.data()
    "rowCount",        # QAbstractItemModel.rowCount()
    "columnCount",     # QAbstractItemModel.columnCount()
    "headerData",      # QAbstractItemModel.headerData()
    "flags",           # QAbstractItemModel.flags()
    # Qt delegate overrides
    "get_theme",       # BaseThumbnailDelegate template method
    "get_item_data",   # BaseThumbnailDelegate template method
    # Qt model/view data role methods (template pattern in base classes)
    "get_display_role_data",
    "get_tooltip_data",
    "get_custom_role_data",
]

# Documented whitelist: methods called through indirection with reasons
[tool.skylos.whitelist.documented]
"should_exclude" = "Called via instance attribute in bundle_app.py"
"closing" = "Protocol field annotation, accessed via self.window.closing"
"settings_manager" = "Protocol field annotation, accessed via self.window.settings_manager"
"threede_scene_model" = "Protocol field annotation, accessed via self.window.threede_scene_model"

# Per-file overrides for classes accessed via multi-hop attribute chains
# (self.window.settings_manager.method(), self.cache_manager.method(), etc.)
# Skylos can't trace through 2+ levels of attribute indirection.
# Note: whitelist patterns match against simple_name (bare method name, no class prefix).
[tool.skylos.overrides."settings_manager.py"]
whitelist = ["get_*", "set_*", "is_*", "has_*", "import_*", "export_*", "reset_*"]

[tool.skylos.overrides."cache_manager.py"]
whitelist = ["get_*", "set_*", "has_*", "cache_*", "clear_*", "invalidate_*", "ensure_*", "merge_*", "shutdown"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
